<resources>
    <string name="app_name">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_description">Photograph of a certain news </string>
    <string name="image_detail_description">Photo of selected news</string>
    <string name="image_detail_repost">Share news with friends</string>
    <string name="button_read_full_news">Read full news</string>
    <string name="textView_detail_title">Detail</string>
    <string name="textView_detail_by_author">by</string>
    <string name="textView_like_news">Favorite</string>
    <string name="user_hint_email">Email</string>
    <string name="user_hint_password">Password</string>
    <string name="textView_user_registration">Don\'t have account? Sign up</string>
    <string name="textView_user_login">Already member? Log in</string>
    <string name="textView_login_title">Welcome back</string>
    <string name="textView_registration_title">Create account</string>
    <string name="textView_login_description">Enter you credential to continue</string>
    <string name="textVew_registration_description">Sign ip to get started!</string>
    <string name="button_login_user">Log in</string>
    <string name="button_registration_user">Sign up</string>
    <string name="textView_footer_splash">Mobile application for Samsung</string>
</resources>